--- a/tutorials_web_ui/angular.json
+++ b/tutorials_web_ui/angular.json
@@ -61,6 +61,7 @@
             }
           },
           "defaultConfiguration": "production"
+         
         },
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
@@ -72,7 +73,10 @@
               "browserTarget": "tutorials_web_ui:build:development"
             }
           },
-          "defaultConfiguration": "development"
+          "defaultConfiguration": "development",
+          "options": {
+            "port": 4200
+          }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
